--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,10 +16,13 @@ jobs:
         echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
         sudo apt update && sudo apt install ngrok
 
-    - name: Construire le conteneur Docker
+    - name: Configurer Ngrok avec l'authtoken
+      run: ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+
+    - name: Construire l’image Docker
       run: docker build -t flask-ngrok .
 
-    - name: Lancer Flask en arrière-plan
+    - name: Lancer le conteneur Flask en arrière-plan
       run: docker run -d -p 5000:5000 flask-ngrok
 
     - name: Lancer Ngrok et afficher l’URL
@@ -29,5 +32,5 @@ jobs:
         echo "URL Temporaire :"
         curl -s http://localhost:4040/api/tunnels | grep -o 'https://[0-9a-z]*\.ngrok.io'
 
-    - name: Attente 120 secondes
+    - name: Maintenir le serveur temporairement (120 sec)
       run: sleep 120
