--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -34,24 +34,14 @@ jobs:
           fi
         done
 
-    - name: Lancer Ngrok et récupérer l’URL
-      id: ngrok
+    - name: Lancer Ngrok et afficher lURL
       run: |
-        ngrok http 5000 > /dev/null &
-        echo "🕒 Démarrage de Ngrok..."
-        for i in {1..10}; do
-          sleep 2
-          TUNNEL_URL=$(curl -s http://localhost:4040/api/tunnels | grep -o 'https://[0-9a-z]*\.ngrok.io' | head -n 1)
-          if [[ ! -z "$TUNNEL_URL" ]]; then
-            echo "✅ Ngrok prêt : $TUNNEL_URL"
-            echo "url=$TUNNEL_URL" >> $GITHUB_OUTPUT
-            break
-          fi
-        done
-        if [[ -z "$TUNNEL_URL" ]]; then
-          echo "❌ Tunnel Ngrok non prêt"
-          exit 1
-        fi
+        # ngrok http 5000 > ngrok.log &
+        # sleep 5
+        # echo "URL Temporaire :"
+        # curl -s http://localhost:5000/api/tunnels | grep -o 'https://[0-9a-z]*\.ngrok.io'
+        ngrok http 5000 --log=stdout &
+        sleep 10
 
     - name: Installer Pytest et lancer les tests
       run: |
